--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'com.google.firebase:firebase-database:19.3.1'
 
+    implementation 'com.android.volley:volley:1.1.0'
+
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.android.volley:volley:1.1.1'
+
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
