--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,12 @@ dependencies {
 
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:19.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
+    implementation 'com.google.android.gms:play-services-auth:11.4.2'
+    apply plugin: 'com.google.gms.google-services'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
